# nws-parse

./: .gitignore  CHANGELOG.md  README.md  default.nix  flake.nix  nws-parse.cabal
src/NWS/: CLI.hs
src/Parser/: NWS.hs
test/: Main.hs
test/data/: LOT_v1.txt  LOT_v2.txt  LOT_v3.txt  SLC_v1.txt  SLC_v2.txt
